<resources>

    <!-- Strings for Startup -->
    <string name="app_name">EFC Connect</string>
    <string name="efc_connect"><b>EFC Connect</b></string>
    <string name="walbro_llc">Walbro LLC</string>
    <string name="btn_scan">Scan</string>

    <!-- Strings for Bottom Navigation Menus -->
    <string name="nav_light_trim"><b>LITE TRIM</b></string>
    <string name="nav_start_instructions"><b>START</b></string>
    <string name="nav_stats"><b>STATS</b></string>
    <string name="nav_dash"><b>DASH</b></string>
    <string name="nav_kill"><b>STOP</b></string>
    <string name="nav_tool"><b>TOOL</b></string>

    <!-- Strings for Attachment Options Menu -->
    <string name="menu_item_change_attachment"><b>Change Attachment</b></string>
    <!-- String, blade, blower, edger, tiller, pole saw -->
    <string name="attach_string"><b>STRING</b></string>
    <string name="attach_blade"><b>BLADE</b></string>
    <string name="attach_blower"><b>BLOWER</b></string>
    <string name="attach_edger"><b>EDGER</b></string>
    <string name="attach_tiller"><b>TILLER</b></string>
    <string name="attach_pole_saw"><b>POLE SAW</b></string>


    <!-- Strings for Starting Instructions -->
    <string name="instructions_prime_bulb"><b>spacer</b></string>
    <string name="instructions_squeeze_throttle"><b>SQUEEZE AND HOLD THROTTLE TRIGGER</b></string>
    <string name="instructions_pull_string"><b>PULL ROPE UNTIL ENGINE STARTS</b></string>

    <!-- Order is important here: -->
    <string-array name="tool_names">
        <item><b>BLADE</b></item>
        <item><b>BLOWER</b></item>
        <item><b>EDGER</b></item>
        <item>TILLER</item>
        <item><b>POLE SAW</b></item>
        <item><b>STRING</b></item>
    </string-array>

    <string-array name="tool_codes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="tool_icons">
        <item>@drawable/ic_blade</item>
        <item>@drawable/ic_blower</item>
        <item>@drawable/ic_edger</item>
        <item>@drawable/ic_tiller</item>
        <item>@drawable/ic_pole_saw</item>
        <item>@drawable/ic_string</item>
    </string-array>

</resources>
